--- a/MapStructPOC/build.gradle
+++ b/MapStructPOC/build.gradle
@@ -10,6 +10,10 @@ plugins {
     // Apply the java-library plugin to add support for Java Library
     id 'java-library'
     id 'net.ltgt.apt' version '0.20'
+    id 'org.springframework.boot' version '2.2.4.RELEASE'
+	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+	id 'java'
+    
 }
 
 
@@ -31,4 +35,10 @@ dependencies {
     
     implementation "org.mapstruct:mapstruct:1.3.1.Final"
     annotationProcessor "org.mapstruct:mapstruct-processor:1.3.1.Final"
+    
+    implementation 'org.springframework.boot:spring-boot-starter'
+	testImplementation('org.springframework.boot:spring-boot-starter-test') {
+		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+	}
+    
 }
