--- a/MapStructPOC/build.gradle
+++ b/MapStructPOC/build.gradle
@@ -9,12 +9,13 @@
 plugins {
     // Apply the java-library plugin to add support for Java Library
     id 'java-library'
-    id 'net.ltgt.apt' version '0.20'
+    id 'net.ltgt.apt' version '0.20' 
     id 'org.springframework.boot' version '2.2.4.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
     
 }
+apply plugin: 'net.ltgt.apt-eclipse'
 
 
 repositories {
@@ -24,17 +25,17 @@ repositories {
 }
 
 dependencies {
+
+    compile "org.mapstruct:mapstruct:1.3.1.Final"
+	annotationProcessor "org.mapstruct:mapstruct-processor:1.3.1.Final"
+	testAnnotationProcessor "org.mapstruct:mapstruct-processor:1.3.1.Final" 
+	
     // This dependency is exported to consumers, that is to say found on their compile classpath.
     api 'org.apache.commons:commons-math3:3.6.1'
-
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:27.0.1-jre'
-
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
-    
-    implementation "org.mapstruct:mapstruct:1.3.1.Final"
-    annotationProcessor "org.mapstruct:mapstruct-processor:1.3.1.Final"
     
     implementation 'org.springframework.boot:spring-boot-starter'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
