SOme more progress

--- a/mapstruct/src/main/resources/application.properties
+++ b/mapstruct/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+subject.teacher.Maths=Maths teacher
+subject.teacher.Science=Science teacher
+subject.teacher.SST=SST teacher
+subject.teacher.Language=Language teacher
