Got an idea to do stuff

--- a/mapstruct/src/main/resources/application.properties
+++ b/mapstruct/src/main/resources/application.properties
@@ -1,4 +1,1 @@
-subject.teacher.Maths=Maths teacher
-subject.teacher.Science=Science teacher
-subject.teacher.SST=SST teacher
-subject.teacher.Language=Language teacher
+subject.teacher={'Maths':'Maths teacher' ,'Science':'Science teacher' ,'SST':'SST teacher' ,'Language':'Language teacher' }
