Added Annotation BeanMapping on mappers, get mapperId from database for a pair of interfaces

--- a/mapstruct/src/main/resources/application.properties
+++ b/mapstruct/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 subject.teacher={'Maths':'Maths teacher' ,'Science':'Science teacher' ,'SST':'SST teacher' ,'Language':'Language teacher' }
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/MapStructPOC
+spring.datasource.username=root
+spring.datasource.password=
