Testing annotation grouping

--- a/mapstruct/src/main/resources/application.properties
+++ b/mapstruct/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 subject.teacher={'Maths':'Maths teacher' ,'Science':'Science teacher' ,'SST':'SST teacher' ,'Language':'Language teacher' }
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/MapStructPOC
+spring.datasource.url=jdbc:mysql://localhost:3306/MapStructPOC?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
